--- a/connect-4/package.json
+++ b/connect-4/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "patch-package": "^7.0.0",
+    "buffer": "^6.0.3",
+    "content-disposition": "^0.5.4",
+    "events": "^3.3.0",
+    "path-browserify": "^1.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "safe-buffer": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.2.0"
+    "patch-package": "^7.0.0",
+    "vite": "^4.3.9"
   }
 }
