--- a/connect-4/.env
+++ b/connect-4/.env
@@ -1,1 +1,5 @@
 VITE_BACKEND_URL = 'http://localhost:3000'
+SOCKET_HOST = 'ws://localhost:3000'
+
+# VITE_BACKEND_URL = 'http://'
+# SOCKET_HOST = 'ws://'
