--- a/connect-4/.env
+++ b/connect-4/.env
@@ -1,5 +1,4 @@
 VITE_BACKEND_URL = 'http://localhost:3000'
-SOCKET_HOST = 'ws://localhost:3000'
 
+# Para produccion
 # VITE_BACKEND_URL = 'http://'
-# SOCKET_HOST = 'ws://'
