--- a/connect-4/package.json
+++ b/connect-4/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "safe-buffer": "^5.2.1",
+    "socket.io-client": "^4.7.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
     "websocket": "^1.0.34"
